2021-01-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha02: Reef Point Shrine';git push
	git tag -a 4.9.8-alpha02 -m '';git push --tags

	* S1D: Write 2D coordinate grid variables to output file

	* S1D: Write 1D coordinate grid variables to output file

2020-12-31  Charlie Zender  <zender@uci.edu>

	* S1D: Write all (still unprocessed) arrays to output file

	* S1D: Put output in data mode, enable OpenMP loop

	* S1D: Allocate all variable resources within OpenMP loop

	* S1D: Determine sparse type for unpacking within OpenMP loop

	* S1D: Only define needed dimensions in output file

2020-12-29  Charlie Zender  <zender@uci.edu>

	* S1D: Define all column-packed variables in output file

	* nco_def_dim() helpful error message information

	* S1D: Define first column-packed variable in output file

2020-12-28  Charlie Zender  <zender@uci.edu>

	* S1D: Working through defining S1D variables in output file

	* NCO 4.9.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha01: Alleles';git push
	git tag -a 4.9.8-alpha01 -m 'Functionally identical to 4.9.7';git push --tags

2020-12-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.7: Oculus';git push
	git tag -a 4.9.7 -m 'S1D progress, nvcc, Andes, Chrysalis, nco_flt_enm; ncks, ncap2 --ccr; ncremap nfr MPAS; ncclimo fix tpd bug, glb_avg wait()';git push --tags

	* BitGroom: revert quantizing two additional bits based on my tests

2020-12-23  Charlie Zender  <zender@uci.edu>

	* BitGroom: quantize two additional bits based on Juan's tests

	* S1D: Determine pft_nbr_out and clm_nbr_out based on generic tests

	* S1D: interrogate both ELM crop model history file and ELM/MALI history/restart files

2020-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.7-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.7-alpha03: Bona';git push