@@ -1,8 +1,12 @@
-2021-01-01  Charlie Zender  <zender@uci.edu>
+2021-01-02  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.9.8-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha02: Reef Point Shrine';git push
 	git tag -a 4.9.8-alpha02 -m '';git push --tags
+
+	* S1D: Process pfts1d for crop variables like GPP
+
+2021-01-01  Charlie Zender  <zender@uci.edu>
 
 	* S1D: Write 2D coordinate grid variables to output file
 
